Added item for ftnplsw.html page
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@73 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ToDo
+++ b/ToDo
@@ -4,10 +4,13 @@ ToDo for ftnpl www
 index.html
  - fix project links
 
-ftninfo.html
-
 ftnplsw.html
+ - split the 'ftn related perl scripts' into two sections, 
+ one for scripts hosted at ftnpl & the other being links
+ to others.
 
+ftninfo.html
+ 
 contact.html - None
 
 robots.txt - None
