--- a/ToDo
+++ b/ToDo
@@ -5,9 +5,7 @@ index.html
  - fix project links
 
 ftnplsw.html
- - split the 'ftn related perl scripts' into two sections, 
- one for scripts hosted at ftnpl & the other being links
- to others.
+ - split this into separate pages?
 
 ftninfo.html
  
