Removed FTP link, because Sourceforge will not be supporting it.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@141 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ToDo
+++ b/ToDo
@@ -5,9 +5,10 @@ index.html
  - fix project links
 
 ftnplsw.html
+ - add link to home page
  - split this into separate pages?
 
-ftninfo.html
+ftninfo.html -  None
  
 contact.html - None
 
