--- a/ToDo
+++ b/ToDo
@@ -7,12 +7,16 @@ index.html
 ftnplsw.html
  - add link to home page
  - split this into separate pages?
+ - add sourceforge icon link?
 
-ftninfo.html -  None
- 
-contact.html - None
+ftninfo.html
+ - add sourceforge icon link?
+   
+contact.html
+ - None
 
-robots.txt - None
+robots.txt
+ - None
 
 
  
